# catalyst-voices

./: .arg  .earthlyignore  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .secret.template  .sqlfluff  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Earthfile  LICENSE-MIT  README.md  SECURITY.md  blueprint.cue  cat-gateway.junit-report.xml  cspell.json  index.html  junit-report.xml  justfile  melos.yaml  package-lock.json  package.json  pubspec.yaml  script.sh  sitemap.xml
.cargo/: README.md  config.toml
catalyst-gateway/: .earthlyignore  .gitignore  .spectral.yml  Cargo.toml  Earthfile  Justfile  LICENSE-MIT  MIT-0  README.md  blueprint.cue  cat-gateway.coverage-report.info  cat-gateway.coverage.test.info  cat-gateway.info  clippy.toml  deny.toml  docker-compose.yml  entrypoint.sh  jaeger.config.yaml  prometheus.yml  rust-toolchain.toml  rustfmt.toml
catalyst-gateway-crates/c509-certificate/: Cargo.toml  Earthfile  deny.toml  index.html  index.js  rust-toolchain.toml  rustfmt.toml
catalyst-gateway-crates/c509-certificate/.cargo/: config.toml
catalyst-gateway-crates/c509-certificate/examples/cli/: main.rs
catalyst-gateway-crates/c509-certificate/examples/data/: cert_sample_1.json
catalyst-gateway-crates/c509-certificate/examples/web/: index.html  index.js
catalyst-gateway-crates/c509-certificate/src/: c509.rs  c509_algo_iden.rs  c509_algo_identifier.rs  c509_big_uint.rs  c509_cert.rs  c509_enum.rs  c509_extension.rs  c509_general_name.rs  c509_name.rs  c509_oid.rs  c509_oid_extension.rs  c509_rdn.rs  c509_time.rs  cbor_encoder.rs  der.rs  lib.rs  signing.rs  tables.rs  tbs_cert.rs  wasm_binding.rs
catalyst-gateway-crates/c509-certificate/src/c509_attributes/: attribute.rs  data.rs  mod.rs
catalyst-gateway-crates/c509-certificate/src/c509_extensions/: alt_name.rs  mod.rs  subject_alt_name.rs
catalyst-gateway/.cargo/: README.md  config.toml
catalyst-gateway/.config/: nextest.toml
catalyst-gateway/crates/: README.md
catalyst-gateway/crates/c509-certificate/: Cargo.toml  Earthfile  index.html  rust-toolchain.toml
catalyst-gateway/crates/catalyst-chain-syncer/: Cargo.toml  README.md
catalyst-gateway/demo/: README.md  docker-compose.yml  jaeger.config.yaml  otel-collector-config.yaml  prometheus.yml
catalyst-gateway/event-db/: .sqlfluffignore  Earthfile  Readme.md  blueprint.cue  check-lint.txt  diagrams.json  docker-compose.yml  entry.sh  local-lint.txt  pyproject.toml  refinery-docs.toml  refinery.toml  setup-db.sql
catalyst-gateway/event-db/historic_data/: fund_0.sql  fund_1.sql
catalyst-gateway/event-db/json_schemas/: .cspell.json
catalyst-gateway/event-db/migrations/: .sqlfluff  V1__config_tables.sql  V2__brand_tables.sql  V2__event_tables.sql  V2__signed_documents.sql  V3__objective_tables.sql  V3__signed_documents.sql  V4__event_tables.sql  V4__proposal_tables.sql  V4__signed_documents.sql  V5__vote_plan.sql  V6__category_tables.sql  V6__registration.sql  V6__snapshot_tables.sql  V7__vote_tables.sql  V8__catalyst_automation.sql  V9__moderation_stage.sql
catalyst-gateway/event-db/migrations_unused/: V2__brand_tables.sql  V3__campaign_tables.sql  V4__event_tables.sql  V5__proposal_tables.sql  V6__category_tables.sql
catalyst-gateway/event-db/queries/: insert_signed_documents.sql  select_signed_documents.sql  select_signed_documents.sql.jinja  select_signed_documents_2.sql  select_signed_documents_2.sql.hbs  select_signed_documents_2.sql.jinja
catalyst-gateway/event-db/scripts/: f14_comments.sql
catalyst-gateway/event-db/seed/: Readme.md  f14.sql  f15.sql  test_signed_documents.sql
catalyst-gateway/event-db/setup/: setup-db.sql
catalyst-gateway/event-db/test_data/: 01_event_table.sql  02_snapshot_table.sql  04_contribution_table.sql  05_goal_table.sql  06_objective_table.sql  07_voteplan_table.sql  08_proposal_table.sql  09_proposal_review_table.sql  10_review_rating_table.sql  11_objective_review_metric_table.sql
catalyst-gateway/event-db/tests/: docker-compose.yml  queries_tests.py  select_signed_documents.py  test_signed_docs_queries.py
catalyst-gateway/mithril_snapshot_loader/: Earthfile  loader.py
catalyst-gateway/scripts/: entry.sh
catalyst-gateway/src/event-db/: Cargo.toml
catalyst-gateway/tests/: .oapi-v3.spectral.yml  .spectral.yml  Cargo.toml  Earthfile  README.md  blueprint.cue  cat-gateway.json  docker-compose-devnet.yml  docker-compose-localhost.yml  docker-compose.yml  haproxy.cfg  haproxy_entry.sh  junit-report.xml  node1-scylla.yaml  schemathesis-docker-compose.yml  scylla.yaml  scylla_entry.sh  st-docker-compose.yml
catalyst-gateway/tests/api_tests/: .gitignore  Earthfile  Earthfile.disabled  Readme.md  blueprint.cue  docker-compose.yml  pyproject.disable.toml  pyproject.toml  snapshot_tool-56364174.json
catalyst-gateway/tests/docker/: docker-compose.postgres.yml  docker-compose.scylla.yml  docker-compose.signed-doc.yml
catalyst-gateway/tests/end2end/: main.rs
catalyst-gateway/tests/event_db_v1_seed_data/: old_format_signed_doc.sql
catalyst-gateway/tests/event_db_v2_seed_data/: old_format_signed_doc.sql
catalyst-gateway/tests/integration/: catalyst_gateway_event_db.rs  docker-compose.yml  main.rs
catalyst-gateway/tests/non_functional/: main.rs
catalyst-gateway/tests/openapi-v3.0-lints/: .spectral.yml
catalyst-gateway/tests/schema-mismatch/: Earthfile  README.md  docker-compose.yml  pyproject.toml
catalyst-gateway/tests/schemathesis_tests/: .gitignore  Earthfile  Earthfile.disabled  README.md  blueprint.cue  entry.sh  schemathesis-docker-compose.yml
catalyst-voices-backend/: Cargo.toml  README.md
catalyst-voices-backend/src/cat-data-service/: Cargo.toml  README.md
catalyst-voices-backend/src/event-db/: Readme.md
signed_docs/: Earthfile  README.md  blueprint.cue  entrypoint.sh  main.py  pyproject.toml  setup_fund.py
signed_docs/dev/: settings.json
signed_docs/dev/categories/: proposal_comment_form_template_1.json  proposal_form_template_1.json
signed_docs/local/: settings.json
signed_docs/local/categories/: proposal_form_template_1.json
(+1796989 files in other folders)
