[workspace]
resolver = "2"
members = [
    "bin",
    # "crates/<a crate>",
]

[workspace.package]
edition = "2021"
version = "0.0.1"
authors = [
    "Steven Johnson <steven.johnson@iohk.io>"
]
homepage = "https://input-output-hk.github.io/catalyst-voices"
repository = "https://github.com/input-output-hk/catalyst-voices"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
clap = "4"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
serde = "1.0"
serde_json = "1.0"
poem = "3.0.0"
poem-openapi = "5.0.0"
prometheus = "0.13.0"
cryptoxide = "0.4.4"
uuid = "1"
lazy_static = "1.4"
panic-message = "0.3"
cpu-time = "1.0"
ulid = "1.0.1"
rust-embed = "8"
url = "2.4.1"
thiserror = "1.0"
chrono = "0.4"
async-trait = "0.1.64"
rust_decimal = "1.29"
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
tokio-postgres = "0.7.10"
tokio = "1"
dotenvy = "0.15"
local-ip-address = "0.6.1"
gethostname = "0.5.0"
hex = "0.4.3"
handlebars = "6.0.0"
anyhow = "1.0.71"
cddl = "0.9.2"
ciborium = "0.2"
pallas = "0.29.0"
cardano-chain-follower = { git = "https://github.com/input-output-hk/hermes.git", branch = "feat/auto-sync-mithril", version="0.1.0" }
stringzilla = "3.8.4"
duration-string = "0.4.0"
once_cell = "1.19.0"
build-info = "0.0.37"
build-info-build = "0.0.37"
ed25519-dalek = "2.1.1"
scylla = { version = "0.13.1", features = ["ssl", "full-serialization"]}
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
openssl = { version = "0.10.66", features = ["vendored"] }
num-bigint = "0.4.6"

[workspace.lints.rust]
warnings = "deny"
missing_docs = "deny"
let_underscore_drop = "deny"
non_ascii_idents = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
exit = "deny"
get_unwrap = "deny"
index_refutable_slice = "deny"
indexing_slicing = "deny"
match_on_vec_items = "deny"
match_wild_err_arm = "deny"
missing_panics_doc = "deny"
panic = "deny"
string_slice = "deny"
unchecked_duration_subtraction = "deny"
unreachable = "deny"
missing_docs_in_private_items = "deny"