[workspace]
resolver = "2"
members = [
    "src/event-db"
]

[workspace.package]
edition = "2021"
version = "0.0.1"
authors = [ ]

[workspace.dependencies]
event-db = { path = "src/event-db" }

thiserror = { version = "1.0" }

serde_json = { version = "1.0" }

# time-related utilities
chrono = { version = "0.4" }

# async traits
async-trait = { version = "0.1.64" }

rust_decimal = { version = "1.29" }

bb8 = { version = "0.8.0" } # Database Connection Pool Manager
bb8-postgres = { version = "0.8.1" } # BB8 Postgres Connection Support.
tokio-postgres = { version = "0.7.7" } # Tokio postgres query handler.

tokio = { version = "1" }

dotenvy = { version = "0.15" }