[workspace]
resolver = "2"
members = [
    "src/event-db",
    "src/cat-data-service",
]

[workspace.package]
edition = "2021"
version = "0.0.1"
authors = [ ]

[workspace.dependencies]
event-db = { path = "src/event-db" }
cat-data-service = { path = "src/cat-data-service" }

thiserror = { version = "1.0" }

serde_json = { version = "1.0" }

chrono = { version = "0.4" }

async-trait = { version = "0.1.64" }

rust_decimal = { version = "1.29" }

bb8 = { version = "0.8.0" }
bb8-postgres = { version = "0.8.1" }
tokio-postgres = { version = "0.7.7" }

tokio = { version = "1" }

dotenvy = { version = "0.15" }