[package]
name = "c509-certificate"
description = "c509 certificate implementation"
keywords = ["cardano", "catalyst", "c509 certificate", "certificate", "x509"]
version = "0.0.1"
authors = [
    "Arissara Chotivichit <arissara.chotivichit@iohk.io>"
]
homepage = "https://input-output-hk.github.io/catalyst-voices"
repository = "https://github.com/input-output-hk/catalyst-voices"
license = "MIT OR Apache-2.0"
edition = "2021"

[lints.rust]
warnings = "deny"
missing_docs = "deny"
let_underscore_drop = "deny"
non_ascii_idents = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"

[lints.clippy]
pedantic = "deny"
unwrap_used = "deny"
expect_used = "deny"
exit = "deny"
get_unwrap = "deny"
index_refutable_slice = "deny"
indexing_slicing = "deny"
match_on_vec_items = "deny"
match_wild_err_arm = "deny"
missing_panics_doc = "deny"
panic = "deny"
string_slice = "deny"
unchecked_duration_subtraction = "deny"
unreachable = "deny"
missing_docs_in_private_items = "deny"

[dependencies]
wasm-bindgen = "0.2"
minicbor = { version = "0.24", features = ["std"] }
hex = "0.4.3"
regex = "1.0.0"
thiserror = "1.0.61"
oid = "0.2.1"
oid-registry = "0.7.0"
asn1-rs = "0.6.0"
anyhow = "1.0.86"
bimap = "0.6.3"
once_cell = "1.19.0"
strum = "0.26.3"
strum_macros = "0.26.3"
