[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false
authors = [
    "Stefano Cunego <stefano.cunego@iohk.io>"
]
rust-version = "1.73"
homepage = "https://input-output-hk.github.io/catalyst-voices"
repository = "https://github.com/input-output-hk/catalyst-voices"
license = "MIT OR Apache-2.0"


[dev-dependencies]

[[test]]
name = "integration"
path = "integration/main.rs"

[[test]]
name = "end2end"
path = "end2end/main.rs"

[[test]]
name = "non_functional"
path = "non_functional/main.rs"