[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false
authors = [
    "Stefano Cunego <stefano.cunego@iohk.io>"
]
rust-version = "1.73"
homepage = "https://input-output-hk.github.io/catalyst-voices"
repository = "https://github.com/input-output-hk/catalyst-voices"
license = "MIT OR Apache-2.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread" ] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
unwrap = "1.2.1"

[[test]]
name = "integration"
path = "integration/main.rs"

[workspace.lints.rust]
warnings = "deny"
missing_docs = "deny"
let_underscore_drop = "deny"
non_ascii_idents = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags = "deny"
invalid_rust_codeblocks = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"

[workspace.lints.clippy]
pedantic = "deny"
unwrap_used = "deny"
expect_used = "deny"
exit = "deny"
get_unwrap = "deny"
index_refutable_slice = "deny"
indexing_slicing = "deny"
match_on_vec_items = "deny"
match_wild_err_arm = "deny"
missing_panics_doc = "deny"
panic = "deny"
string_slice = "deny"
unchecked_duration_subtraction = "deny"
unreachable = "deny"
missing_docs_in_private_items = "deny"