[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false
authors = [
    "Stefano Cunego <stefano.cunego@iohk.io>"
]
rust-version = "1.75"
homepage = "https://input-output-hk.github.io/catalyst-voices"
repository = "https://github.com/input-output-hk/catalyst-voices"
license = "MIT OR Apache-2.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread" ] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
unwrap = "1.2.1"

[[test]]
name = "integration"
path = "integration/main.rs"

[lints]
workspace = true