[package]
name = "c509-certificate"
version = "0.0.1" 
authors = [""]
description = "c509-certificate library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/input-output-hk/catalyst-voices"
homepage = "https://input-output-hk.github.io/catalyst-voices"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
