[package]
name = "c509-certificate"
description = "c509 certificate implementation"
keywords = ["cardano", "catalyst", "c509 certificate", "certificate", "x509"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
wasm-bindgen = { workspace = true }
