[package]
name = "c509-certificate"
description = "c509 certificate implementation"
keywords = ["cardano", "catalyst", "c509 certificate", "certificate", "x509"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
wasm-bindgen = "0.2"
minicbor = { version = "0.24", features = ["alloc"] }
hex = "0.4.3"
regex = "1.0.0"
thiserror = "1.0.61"