# cspell: words bitcoinlib addopts

[tool.poetry]
name = "api_tests"
version = "0.1.0"
description = ""
authors = ["Joaquín Rosales <joaquin.rosales@iohk.io>"]
readme = "Readme.md"
license = "MIT or Apache-2.0"
packages = [
    { include = "integration" },
]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
asyncio = "^3.4.3"
asyncpg = "^0.30.0"
requests = "^2.32.3"
pytest = "^8.0.0"
python-bitcoinlib = "^0.12.2"
pytest-cov = "^5.0.0"
pycardano = "^0.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "ci: marks tests to be run in ci",
    "nightly: marks tests to be run nightly",
    "preprod_indexing: marks test which requires indexing of the cardano preprod network",
]
addopts = "-m 'not preprod_indexing'"
