# cspell: words addopts testpaths pythonpath uniffi

[project]
name = "api-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT or Apache-2.0"
authors = ["Joaquín Rosales <joaquin.rosales@iohk.io>"]
requires-python = ">=3.14"
dependencies = [
    "catalyst-python",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "requests>=2.32.5",
]

[tool.uv.sources]
catalyst-python = { git = "https://github.com/input-output-hk/catalyst-libs.git", subdirectory="catalyst-python", tag = "catalyst-python/v0.3.0" }

[tool.pytest.ini_options]
markers = [
    "unmarked: tests without any specific environment",
    "ci: marks tests to be run in ci",
    "nightly: marks tests to be run nightly",
    "preprod_indexing: marks test which requires indexing of the cardano preprod network",
    "health_endpoint: marks tests for health endpoint",
    "health_with_proxy_endpoint: marks tests for health endpoint which requires a proxy for testing"
]
addopts = "-m 'not preprod_indexing and not health_endpoint'"
asyncio_default_fixture_loop_scope = "function"
pythonpath = "."
testpaths = ["integration"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
]
